# discord-backend-actix

user-management-service/: .env  .gitignore  Cargo.toml  cert.pem  key.pem
user-management-service/entity/: Cargo.toml
user-management-service/entity/src/: channel.rs  friend_requests.rs  friendships.rs  lib.rs  mod.rs  prelude.rs  server.rs  user.rs  users.rs  users_channels.rs  users_servers.rs
user-management-service/macros_lib/: Cargo.toml
user-management-service/macros_lib/src/: lib.rs
user-management-service/repository/: Cargo.toml
user-management-service/repository/src/user_repository/: mod.rs
user-management-service/services/: Cargo.toml
user-management-service/services/src/: lib.rs
user-management-service/services/src/auth_service/: login.rs  mod.rs  register.rs  token.rs
user-management-service/services/src/user_service/: mod.rs
user-management-service/services/tests/: login.rs
user-management-service/src/: main.rs
user-management-service/src/controllers/: friends_controller.rs  login_controller.rs  mod.rs  user_controller.rs
user-management-service/src/controllers/models/: mod.rs
