[package]
name = "user-management-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", 
        "entity", "models", "repository", "services", "macros_lib"
        # "migration"
    ]



[dependencies]
macros_lib = { path = "./macros_lib" }
entity = { path = "entity" }
services = {path="services"}
repository= {path="repository"}
actix-web = {version = "4.5.1",features = ["openssl"]}
serde = { version = "1.0.198", features = ["derive"] }
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros","debug-print" ] }
tokio = { version = "1.37.0", features = ["full"] }
openssl = { version = "0.10" }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18",default-features = true,features = ["json","env-filter","fmt"]}
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
dotenv = "0.15.0" 
r2d2_redis= "0.14.0"
actix-web-lab="0.20.2"

[dependencies.sea-orm-migration]
version = "0.12.15"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
