[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
serde = { version = "1.0.198", features = ["derive"] }
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros","debug-print" ] }
redis = "0.25.3"
chrono={version ="0.4.38",features = ["serde"]}
r2d2_redis="0.14.0"