[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
repository= {path = "../repository"}
serde = { version = "1.0.198", features = ["derive"] }
serde_json="1.0.116"
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros","debug-print" ] }
jsonwebtoken= "9.3.0"
ring="0.17.8"
hex="0.4.3"
argon2="0.5"
redis = "0.25.3"
chrono={version ="0.4.38",features = ["serde"]}
r2d2_redis="0.14.0"


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "login"
required-features = ["mock"]